syntax = "proto3";

option go_package = ".;trippb";

// 複合類型
message Trip{
    // 基本類型
    string start = 1;
    Location start_pos = 5; // 加字段靠數字加

    // repeated 類型
    repeated Location path_pos = 7;
    string end = 2;
    Location end_pos = 6;
    int64 duration_sec = 3;
    int64 fee_cent = 4;   
    TripStatus status = 8;
    bool isPromotionTrip = 9; // 老系統沒有就默認false
    // bool isFromLoggedInUser = 10; // 命名邏輯錯誤
    bool isFromGuestUser = 10; // 邏輯正確的命名
}

message Location{
    double latitude=1;
    double longitude=2;
}

// 枚舉類型，enum 中需要全部大寫
enum TripStatus{
    TS_NOT_SPECIFIED = 0; // 未定義為0
    NOT_STARTED = 1;
    IN_PROGRESS = 2;
    FINISHED = 3;
    PAID = 4;
}